agrego boarreglo de errorestilton

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <input class="form__input"type="text" id="apellidos" placeholder="Apellidos" required>
             <input class="form__input"type="number" id="edad" placeholder="Edad" required>
             <button class="form__input"type="submit">Agregar Alumno</button>
-    </div>
+        </form>
+        </div>
     <div id="lista-alumnos">
         <h2>Lista de Alumnos</h2>
         <input type="text" id="search"class="form-control mb-3"  placeholder="Buscar por nombre">
@@ -46,6 +47,9 @@
             <input type="text" id="materia" placeholder="Materia" required>
             <button type="submit">Inscribir</button>
         </form>
+    </div>x
+    <div>
+
     </div>
     <script src="main.js"></script>
 </body>
